Gesprek- en berichtroutes: DM/groep CRUD, lidmaatschap, versturen/lijsten
